FIX LOGIN 3 ROLES